# ManaPlus

./: .cirrus.yml  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  AUTHORS  Android.mk  CMakeLists.txt  CMakeLists.txt.switch  COPYING  ChangeLog  Gitter.im  INSTALL  Info.plist  Makefile.am  PKGBUILD  PKGBUILD.in  README  README-SWITCH.md  README.cmake  README.md  README.txt  azure-pipelines.yml  azure-pipelines_macosx.yml  azure-pipelines_windows.yml  bcmake  bdeb.sh  bmake  bmake0  bmake44  bmake46  build.sh  circle.yml  clmake  configure.ac  fink.sh  makecheck1  makecheck2  (+22 more)
data/evol/: Makefile.am  evol.desktop  evol.desktop.in  evol.in  evol.manaplus
data/fonts/: CMakeLists.txt  Makefile.am
data/graphics/: CMakeLists.txt  Makefile.am
data/help/: CMakeLists.txt  Makefile.am  about-tmw.txt  about.txt  changes.txt  chatcommands.txt  chatguild.txt  chatparty.txt  commands.txt  download.txt  footer.txt  header.txt  index.txt  otherteam.txt  searchmany.txt  searchnotfound.txt  skills.txt  support.txt  tags.idx  team.txt  windows.txt
data/icons/: CMakeLists.txt  Makefile.am  manaplus.hqx  manaplus.icns  manaplus.xpm
data/test/: CMakeLists.txt  Makefile.am  equipmentwindow.xml  items.xml  itemxmlutils_test.xml  palette.gpl  paths.xml  quests.xml  serverlistplus.xml  simplefile.txt  testintmap.xml  units.xml
data/tmw/: Makefile.am  tmw.desktop  tmw.desktop.in  tmw.in  tmw.manaplus
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  POTgen.sh  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  manaplus.pot  nb.po  nds.po  nl.po  nl_BE.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sq.po  sr.po  sv.po  sv_SE.po  (+8 more)
po/unused/: bg.po  en_GB.po  eo.po  et.po  ka.po  sk.po  sq.po  te.po  th.po  zh_TW.po
src/: CMakeLists.txt  Makefile.am  SDLMain.m  SDL_gfxBlitFunc.h  actionmanager.cpp  actionmanager.h  actor.cpp  actor.h  actormanager.cpp  actormanager.h  actorsprite.cpp  actorsprite.h  actorspritelistener.h  actorspritemanager.cpp  actorspritemanager.h  animatedsprite.cpp  animatedsprite.h  animatedsprite_unittest.cc  animationdelayload.cpp  animationdelayload.h  animationparticle.cpp  animationparticle.h  auctionmanager.cpp  auctionmanager.h  avatar.cpp  avatar.h  being.cpp  being.h  beingcacheentry.h  beingequipbackend.cpp  beingequipbackend.h  catch.hpp  channel.cpp  channel.h  channelmanager.cpp  channelmanager.h  chatlog.cpp  chatlog.h  chatlogger.cpp  chatlogger.h  (+205 more)
src/actions/: actiondef.h  actionfuncptr.h  actions.cpp  actions.h  chat.cpp  chat.h  commands.cpp  commands.h  move.cpp  move.h  pets.cpp  pets.h  statusbar.cpp  statusbar.h  tabs.cpp  tabs.h  target.cpp  target.h  windows.cpp  windows.h
src/being/: actor.cpp  actor.h  actorsprite.cpp  actorsprite.h  actorspritelistener.h  actortype.h  attributes.h  being.cpp  being.h  beingaction.h  beingcacheentry.h  beingdirection.h  beingflag.h  beingspeech.h  castingeffect.cpp  castingeffect.h  claninfo.cpp  claninfo.h  compounditem.h  compoundsprite.cpp  compoundsprite.h  cookingtype.h  crazymoves.cpp  crazymoves.h  flooritem.cpp  flooritem.h  gender.h  homunculusinfo.h  localclan.cpp  localclan.h  localplayer.cpp  localplayer.h  mercenaryinfo.h  petinfo.h  pickup.h  playerignorestrategy.h  playerinfo.cpp  playerinfo.h  playerrelation.cpp  playerrelation.h  (+6 more)
src/const/: emoteshortcut.h  equipment.h  itemshortcut.h  sound.h  spells.h
src/debug/: debug_new.cpp  debug_new.h  fast_mutex.h  readme.txt  static_assert.h
src/dyetool/: client.cpp  client.h  dyemain.cpp
src/enet/: packet.c  unix.c
src/enums/: commandtarget.h  cutin.h  dragdropsource.h  emotetype.h  enums_unittest.cc  equipslot.h  guildpositionflags.h  inventorytype.h  magicschool.h  screendensity.h  simpletypes.h  state.h  textcommandtype.h
src/events/: actionevent.h  event.h  inputevent.h  inputguievent.h  keyevent.h  keyeventtype.h  mousebutton.h  mouseevent.h  mouseeventtype.h  selectionevent.h
src/fs/: files.cpp  files.h  files_unittest.cc  mkdir.cpp  mkdir.h  paths.cpp  paths.h  specialfolder.cpp  specialfolder.h  virtdirentry.cpp  virtdirentry.h  virtfile.cpp  virtfile.h  virtfileprivate.cpp  virtfileprivate.h  virtfs.cpp  virtfs.h  virtfs_unittest.cc  virtfsdir.cpp  virtfsdir.h  virtfsdir_unittest.cc  virtfsfuncs.h  virtfsphys.cpp  virtfsphys.h  virtfsphys_unittest.cc  virtfsrwops.cpp  virtfsrwops.h  virtfstools.cpp  virtfstools.h  virtfszip.cpp  virtfszip.h  virtfszip_unittest.cc  virtlist.cpp  virtzipentry.cpp  virtzipentry.h  zip.cpp  zip.h  zip_unittest.cc  ziplocalheader.cpp  ziplocalheader.h
src/gui/: beingpopup.cpp  beingpopup.h  botcheckerwindow.cpp  botcheckerwindow.h  browserlink.h  buttoninfo.h  buttontext.h  buy.cpp  buy.h  buydialog.cpp  buydialog.h  buysell.cpp  buysell.h  buyselldialog.cpp  buyselldialog.h  changeemaildialog.cpp  changeemaildialog.h  changepassworddialog.cpp  changepassworddialog.h  charcreatedialog.cpp  charcreatedialog.h  charselectdialog.cpp  charselectdialog.h  chat.cpp  chat.h  chatconsts.h  chatlog.h  chatmsgtype.h  chatwindow.cpp  chatwindow.h  cliprect.cpp  cliprect.h  cliprectangle.cpp  cliprectangle.h  color.cpp  color.h  colorpair.h  confirmdialog.cpp  confirmdialog.h  connectiondialog.cpp  (+186 more)
src/guichan/: actionevent.cpp  basiccontainer.cpp  cliprectangle.cpp  color.cpp  defaultfont.cpp  defaultfont.hpp  event.cpp  exception.cpp  focushandler.cpp  font.cpp  graphics.cpp  gui.cpp  gui.hpp  image.cpp  image.hpp  imageloader.hpp  inputevent.cpp  key.cpp  keyevent.cpp  keyinput.cpp  keyinput.hpp  mouseevent.cpp  mouseinput.cpp  qqq  rectangle.cpp  selectionevent.cpp  widget.cpp
src/input/: inputaction.h  inputactiondata.h  inputactionmap.h  inputactionoperators.cpp  inputactionoperators.h  inputactionsortfunctor.h  inputcondition.h  inputevent.cpp  inputevent.h  inputfunction.h  inputitem.h  inputmanager.cpp  inputmanager.h  inputtype.h  joystick.cpp  joystick.h  key.cpp  key.h  keyboardconfig.cpp  keyboardconfig.h  keyboarddata.h  keydata.h  keyevent.cpp  keyevent.h  keyinput.h  (+7 more)
(+3412 files in other folders)
